syntax = "proto3";

package com.bht.parkingmap.api.proto.parkinglot;
//option java_generic_services = true;
option java_multiple_files = true;

import "google/protobuf/wrappers.proto";
import "Actor.proto";

enum ParkingLotType {
    BUILDING = 0;
    PRIVATE = 1;
    STREET = 2;
}

message ParkingLotResult {
    int64 id = 1;
    string name = 2;
    ParkingLotType type = 3;
    double latitude = 4;
    double longitude = 5;
    int32 availableSlot = 6;
    int32 totalSlot = 7;
    double distance = 8;
}

message ParkingLot {
    int64 id = 1;
    ParkingLotType type = 2;
    double latitude = 3;
    double longitude = 4;
    string openingHour = 5;
    string closingHour = 6;
    int32 availableSlot = 7;
    int32 totalSlot = 8;
    int64 version = 9;
}

message ParkingLotInformation {
    ParkingLot parkingLot = 1;
    string name = 2;
    string address = 3;
    string phone = 4;
    double ratingAverage = 5;
    int32 numberOfRating = 6;
    bytes imageData = 7;
    int64 version = 8;
}

message ParkingLotUnit {
    int64 id = 1;
    int64 parkingLotId = 2;
    int32 lowerBoundHour = 3;
    int32 upperBoundHour = 4;
    int32 unitPrice = 5;
    int64 version = 6;
}

message ParkingLotRating {
    int64 id = 1;
    int64 parkingLotId = 2;
    user.Customer customer = 3;
    int32 rating = 4;
    string comment = 5;
    string lastUpdated = 6;
    int64 version = 7;
}

message ParkingLotSuggestion {
    int64 id = 1;
    user.Customer customer = 2;
    string parkingLotName = 3;
    string address = 4;
    double latitude = 5;
    double longitude = 6;
    bool isHandled = 7;
    string lastUpdated = 8;
    int64 version = 9;
}

message ParkingLotScanningByRadius {
    double latitude = 1;
    double longitude = 2;
    int32 radiusToScan = 3;
    int32 nResult = 4;
}

message ParkingLotResultList {
    repeated ParkingLotResult parkingLotResult = 1;
}

service ParkingLotService {
    rpc getParkingLotInformationByParkingLotId (google.protobuf.Int64Value) returns (ParkingLotInformation);
    rpc getTopParkingLotInRegionOrderByDistanceWithName (ParkingLotScanningByRadius) returns (ParkingLotResultList);
    rpc getTopParkingLotInRegionOrderByDistanceWithoutName (ParkingLotScanningByRadius) returns (ParkingLotResultList);
}